fix: change dark mode text color to snow

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a:visited {
 @media (prefers-color-scheme: dark) {
   body {
     background-color: black;
-    color: white;
+    color: snow;
   }
   a {
     color: lightskyblue;
